format(txndata): ras (#1032)
* format: only deleting this.

Signed-off-by: Francois Bojarski <francois.bojarski@consensys.net>

* ras

Signed-off-by: Francois Bojarski <francois.bojarski@consensys.net>

---------

Signed-off-by: Francois Bojarski <francois.bojarski@consensys.net>